--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
           shopware-version: ${{ matrix.version }}
           php-version: ${{ matrix.php-version }}
           php-extensions: pcov
+          install: true
 
       - name: Info
         run: |
@@ -32,7 +33,6 @@ jobs:
           mysql -V
           php -v
           composer -V
-          echo ${{ github.workspace }}
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -73,6 +73,8 @@ jobs:
         with:
           shopware-version: ${{ matrix.version }}
           php-version: ${{ matrix.php-version }}
+          php-extensions: pcov
+          install: true
 
       - name: Info
         run: |
@@ -80,7 +82,6 @@ jobs:
           mysql -V
           php -v
           composer -V
-          echo ${{ github.workspace }}
 
       - name: Checkout
         uses: actions/checkout@v3
