feature: allow passing media timestamp to image service (#132)
* feature: allow passing media timestamp to image service

* feat: change string "null" to "0"

* chore: release 5.1.0

---------

Co-authored-by: tinect <s.koenig@tinect.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,6 @@ jobs:
           mysql -V
           php -v
           composer -V
-          echo ${{ github.workspace }}
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -73,6 +72,7 @@ jobs:
         with:
           shopware-version: ${{ matrix.version }}
           php-version: ${{ matrix.php-version }}
+          php-extensions: pcov
 
       - name: Info
         run: |
@@ -80,7 +80,6 @@ jobs:
           mysql -V
           php -v
           composer -V
-          echo ${{ github.workspace }}
 
       - name: Checkout
         uses: actions/checkout@v3
