--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [ "v6.6.1.1", "v6.6.0.3", "trunk" ]
+        version: [ "v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3" ]
         php-version: [ "8.2" ]
     runs-on: ubuntu-latest
     steps:
