chore: test anchor for matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,8 @@ on:
   workflow_call:
 
 env:
-  SHOPWARE_VERSIONS: '["v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk"]'
-  PHP_VERSIONS: '["8.2", "8.3"]'
+  SHOPWARE_VERSIONS: &shopware_versions '["v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk"]'
+  PHP_VERSIONS: &php_versions '["8.2", "8.3"]'
 
 jobs:
   Test:
@@ -19,8 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ${{ fromJSON(env.SHOPWARE_VERSIONS) }}
-        php-version: ${{ fromJSON(env.PHP_VERSIONS) }}
+        version: ${{ fromJSON(*shopware_versions) }}
+        php-version: ${{ fromJSON(*php_versions) }}
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
@@ -67,8 +67,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ${{ fromJSON(env.SHOPWARE_VERSIONS) }}
-        php-version: ${{ fromJSON(env.PHP_VERSIONS) }}
+        version: ${{ fromJSON(*shopware_versions) }}
+        php-version: ${{ fromJSON(*php_versions) }}
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
