--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,6 @@ on:
   pull_request:
   workflow_call:
 
-env:
-  SHOPWARE_VERSIONS: '["v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk"]'
-  PHP_VERSIONS: '["8.2", "8.3"]'
-
 jobs:
   Test:
     env:
@@ -19,8 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ${{ fromJSON(env.SHOPWARE_VERSIONS) }}
-        php-version: ${{ fromJSON(env.PHP_VERSIONS) }}
+        version: [ "v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk" ]
+        php-version: [ "8.2" ]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
@@ -67,8 +63,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: ${{ fromJSON(env.SHOPWARE_VERSIONS) }}
-        php-version: ${{ fromJSON(env.PHP_VERSIONS) }}
+        version: [ "v6.6.1.1", "v6.6.0.3", "trunk" ]
+        php-version: [ "8.2" ]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
