--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # don't forget to update the matrix for integration tests
         version: [ "v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk" ]
-        php-version: [ "8.2" ]
+        php-version: [ "8.2", "8.3" ]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
@@ -63,8 +64,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [ "v6.6.1.1", "v6.6.0.3", "trunk" ]
-        php-version: [ "8.2" ]
+        version: [ "v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk" ]
+        php-version: [ "8.2", "8.3" ]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Shopware
