--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         # don't forget to update the matrix for integration tests
-        version: [ "v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk" ]
+        version: [ "v6.6.4.0", "v6.6.3.1", "v6.6.2.0", "v6.6.1.1", "v6.6.0.3", "trunk" ]
         php-version: [ "8.2", "8.3" ]
     runs-on: ubuntu-latest
     steps:
