--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,8 +3,6 @@ parameters:
     paths:
         - src
         - tests
-    type_coverage:
-        param_type: 95
     ignoreErrors:
         -
             message: "#tag\\:v6\\.7\\.0 - reason:becomes-internal#"
@@ -18,6 +16,10 @@ parameters:
 
         -
             message: "#possible constant types, only#"
+            reportUnmatched: false
+
+        -
+            message: "#possible param types, only#"
             reportUnmatched: false
         -
             message: "#^Call to an undefined method Shopware\\\\Core\\\\Content\\\\Media\\\\Message\\\\GenerateThumbnailsMessage\\:\\:setContext\\(\\)\\.$#"
