chore: get version constraint from composer.json

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Get Shopware Version
+        id: shopware-constraint
+        run: echo "shopware_constraint=$(cat composer.json | jq -r '.require."shopware/core"')" >> $GITHUB_OUTPUT
+
       - name: Get Shopware Matrix
         uses: tinect/github-shopware-matrix-generator@main
         id: matrix
         with:
-          versionConstraint: '~6.6.0'
+          versionConstraint: ${{ steps.shopware-constraint.outputs.shopware_constraint }}
           allowEol: false
           justMinMaxShopware: false
           allowShopwareNext: true
