--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,15 @@ jobs:
     outputs:
       matrix: ${{ steps.matrix.outputs.matrix }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout v4
+        if: github.event_name != 'pull_request'
+        uses: actions/checkout@v4
+        with:
+          ref: v4
+
+      - name: Checkout Pull Request
+        if: github.event_name == 'pull_request'
+        uses: actions/checkout@v4
 
       - name: Get Shopware Version
         id: shopware-constraint
