feat: support nikic/php-parser v5

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "shopware/core": "~6.6.0",
-        "nikic/php-parser": "^4.13.0"
+        "nikic/php-parser": "^4.13.0|^5.0.0"
     },
     "suggest": {
         "frosh/lazy-sizes": "*"
