chore: mark support for shopware 6.7.0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           allowEol: false
           justMinMaxShopware: false
           allowShopwareNext: true
-          allowShopwareRC: false
+          allowShopwareRC: true
 
   Test:
     env:
