--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
             "homepage": "https://friendsofshopware.de"
         }
     ],
+    "minimum-stability": "RC",
     "require": {
-        "shopware/core": "~6.6.0",
+        "shopware/core": "~6.6.0||~6.7.0",
         "nikic/php-parser": "^4.13.0|^5.0.0"
     },
     "suggest": {
