--- a/phpstan.baseline-generated-files.neon
+++ b/phpstan.baseline-generated-files.neon
@@ -11,6 +11,13 @@ parameters:
             count: 1
             path: src/DependencyInjection/ThumbnailService.php
             reportUnmatched: false
+
+        -
+            message: '#^Call to deprecated method#'
+            count: 3
+            path: src/DependencyInjection/ThumbnailService.php
+            reportUnmatched: false
+
         -
             message: "#^Call to an undefined method Shopware\\\\Core\\\\Content\\\\Media\\\\Message\\\\GenerateThumbnailsMessage\\:\\:setContext\\(\\)\\.$#"
             count: 1
