--- a/phpstan.baseline-generated-files.neon
+++ b/phpstan.baseline-generated-files.neon
@@ -19,6 +19,12 @@ parameters:
             reportUnmatched: false
 
         -
+            message: '#^Only booleans are allowed in &&#'
+            count: 1
+            path: src/DependencyInjection/ThumbnailService.php
+            reportUnmatched: false
+
+        -
             message: "#^Call to an undefined method Shopware\\\\Core\\\\Content\\\\Media\\\\Message\\\\GenerateThumbnailsMessage\\:\\:setContext\\(\\)\\.$#"
             count: 1
             path: src/DependencyInjection/FileSaver.php
